--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<!-- saved from url=(0044)file:///home/martin/src/js/stacky/index.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <script src="script.js"></script>
+    <script src="./index_files/script.js" defer=""></script>
   </head>  
   <body>
-  </body>
-</html>  
+<canvas id="canvas">
+
+</canvas>  
+</body></html>
