--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <script src="./index_files/script.js" defer=""></script>
-  </head>  
+    <script src="script.js" defer=""></script>
+  </head>
   <body>
-<canvas id="canvas">
+<canvas id="canvas" style="width:512px; height:512px;">
+</canvas>
 
-</canvas>  
+<textarea id="code"></textarea>
+<div id="output"></div>
 </body></html>
