--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!-- saved from url=(0044)file:///home/martin/src/js/stacky/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <!-- <link rel="stylesheet" href="style.css"> -->
     <script src="script.js" defer=""></script>
   </head>
   <body>
-<canvas id="canvas" style="width:512px; height:512px;">
-</canvas>
-
-<textarea id="code"></textarea>
-<div id="output"></div>
-</body></html>
+    <canvas id="canvas" style="width:512px; height:512px;"></canvas>
+    <textarea id="code" style="width:512px; height:512px;"></textarea>
+    <div id="output"></div>
+  </body>
+</html>
