--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <script src="compiled.js" defer=""></script>
+    <!-- <script src="compiled.js" defer=""></script> -->
+    <script src="script.js" defer=""></script>
   </head>
   <body>
     <canvas id="canvas" width="256px" height="256px" style="width:512px; height:512px;"></canvas>
